Undo/Redo don't work properly with Text Insert Mode in Text Editor #38264

Closed
opened 2014-01-17 14:43:01 +01:00 by Paulo José Oliveira Amaro · 10 comments

System Information
Ubuntu 13.10 32-bit
Intel Ironlake Mobile x86/MMX/SSE

Blender Version
Broken: 2.69.8 8aaf4aa

Short description of error
In Text Editor, the actions of undo or redo a previous text created with Text Insert Mode enabled (key INS), don't work properly, letting the text unrecoverable.

Exact steps for others to reproduce the error
lease, see this video. Look how each redo or undo action is immediately undone by the following one, making impossible to recover or redo the text properly.
bug-text-editor.avi

**System Information** Ubuntu 13.10 32-bit Intel Ironlake Mobile x86/MMX/SSE **Blender Version** Broken: 2.69.8 8aaf4aa **Short description of error** In Text Editor, the actions of undo or redo a previous text created with Text Insert Mode enabled (key INS), don't work properly, letting the text unrecoverable. **Exact steps for others to reproduce the error** lease, see this video. Look how each redo or undo action is immediately undone by the following one, making impossible to recover or redo the text properly. [bug-text-editor.avi](https://archive.blender.org/developer/F69678/bug-text-editor.avi)

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @PauloJoseOliveiraAmaro

Added subscriber: @PauloJoseOliveiraAmaro

Added subscribers: @dail, @ideasman42, @brecht

Added subscribers: @dail, @ideasman42, @brecht

I had a quick look at this but don't understand the code here well. @ideasman42 or @dail, do either of you want to take this one?

Personally I wouldn't mind if we just removed this insert key functionality entirely, it seems such an outdated thing, but maybe some people still use it.

I had a quick look at this but don't understand the code here well. @ideasman42 or @dail, do either of you want to take this one? Personally I wouldn't mind if we just removed this insert key functionality entirely, it seems such an outdated thing, but maybe some people still use it.
Member

Hi @brecht,

Here is fix for this. I know I have commit access to the repo but haven't looked into setting up arc or dealing with keys yet. So feel free to commit this. Thanks! :)

Hi @brecht, Here is fix for this. I know I have commit access to the repo but haven't looked into setting up arc or dealing with keys yet. So feel free to commit this. Thanks! :)

This issue was referenced by blender/blender-addons-contrib@7c6f60572b

This issue was referenced by blender/blender-addons-contrib@7c6f60572b24ef80abc6a64932791eba8d21ba2a

This issue was referenced by 7c6f60572b

This issue was referenced by 7c6f60572b24ef80abc6a64932791eba8d21ba2a
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Closed by commit 7c6f60572b.

Closed by commit 7c6f60572b.

Thanks, committed now.

You don't need arc to commit by the way, it's just a more convenient way to do code reviews, but you would need to set up SSH keys for git.

Thanks, committed now. You don't need arc to commit by the way, it's just a more convenient way to do code reviews, but you would need to set up SSH keys for git.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#38264
No description provided.