Fix T38264: undo/redo broken with text overwrite mode in text editor (insert key).